Fix resizing bug on Mobile Safari 10
See also: https://bugs.webkit.org/show_bug.cgi?id=82489

--- a/src/css/global-header/_logo.scss
+++ b/src/css/global-header/_logo.scss
@@ -1,6 +1,5 @@
 // Logo
 .logo {
-  flex: auto;
   font-size: ($ratio-text-logo * 1rem);
   font-weight: 900;
   line-height: 1;
@@ -21,6 +20,7 @@
 
 .logo svg {
   height: ($ratio-text-logo * $line-height-root * 1rem);
+  max-width: 100%;
   width: auto;
 
   @media (min-width: $breakpoint-content) {
