--- a/src/css/widget/_share.scss
+++ b/src/css/widget/_share.scss
@@ -12,6 +12,7 @@
 
 .share svg {
   height: $height-share-icon;
+  max-width: 100%;
   vertical-align: middle;
   width: auto;
 }
